change cursor on hover, added shop, fixed spacing

--- a/styles/about.css
+++ b/styles/about.css
@@ -24,6 +24,10 @@
 	margin-top:1em;
 }
 
+#header #bar #shop{
+	margin-top:1em;
+}
+
 #about-main{
 	font-family: "Futura";
 	padding-top:5rem;
