--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,11 @@
 	margin-top:1em;
 }
 
+#header #bar #shop{
+	margin-top:1em;
+}
+
+
 .background{
    position: fixed;
    top: 0;
